# fmu-runner-rs

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
examples/: force_injector.rs
libfmi/: Cargo.toml  README.md  bindgen.sh  build.rs
libfmi/src/: fmi.rs  lib.rs  logger.c  logger.rs
src/: fmu.rs  lib.rs  model_description.rs  wrapper.rs
tests/: cs_fmu.rs
tests/fmu/: bouncing_ball.fmu  free_fall.fmu  planar_ball.fmu  point_mass_pendulum.fmu
tests/force_injector/: Cargo.toml  build.rs
tests/force_injector/src/: force_injector.h  lib.rs
tests/parsing/: bouncing-ball.xml  complex-fmi.xml  unit-test.xml
