[package]
name = "libfmi"
version = "2.0.4"
edition = "2021"
authors = ["Nikita Rushmanov <rush3nik@gmail.com>", "Marvin Struijk"]
description = "Generated C bindings for the FMI standard."
repository = "https://github.com/Nikita240/fmu-runner-rs"

[build-dependencies]
# bindgen = "0.68.1"
cc = "1.0.79"

[dependencies]
log = "0.4.20"
