[package]
name = "libfmi"
version = "2.2.4"
edition = "2021"
authors = ["Nikita Rushmanov <rush3nik@gmail.com>", "Marvin Struijk"]
description = "Generated C bindings for the FMI standard."
repository = "https://github.com/Nikita240/fmu-runner-rs"
homepage = "https://github.com/Nikita240/fmu-runner-rs"
license = "MIT OR Apache-2.0"
keywords = ["model", "ode", "modelica", "fmu", "fmi"]
categories = ["science", "simulation", "external-ffi-bindings"]
readme = "README.md"
exclude = ["fmi-standard", "!fmi-standard/headers/*.h", "bindgen.sh"]

[build-dependencies]
# bindgen = "0.68.1"
cc = "1.0.79"

[dependencies]
libloading = "0.8.1"
log = "0.4.20"
